Production/01-02-2025/force-app/main/default/objects/Account/fields/Ability_to_model_data_to_geo__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_model_data_to_geo__c</fullName>
    <label>Ability to model data to geo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>