Production/01-02-2025/force-app/main/default/objects/Account/fields/Able_to_implement_JS_Tag__c.field-meta.xml
<CustomField>
    <fullName>Able_to_implement_JS_Tag__c</fullName>
    <label>Able to implement JS Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>