Production/01-02-2025/force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Account</fullName>
            </value>
            <value>
                <fullName>Regional Account</fullName>
            </value>
            <value>
                <fullName>Global Account</fullName>
            </value>
            <value>
                <fullName>Holding Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>