Production/01-02-2025/force-app/main/default/objects/Account/fields/Advertiser_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Sector_1__c</fullName>
    <label>Advertiser Sector 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Campaign Classified</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Computers</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>CPG/FMCG</fullName>
            </value>
            <value>
                <fullName>Govt. Orgs. &amp; Nonprofits</fullName>
            </value>
            <value>
                <fullName>Internet &amp; Telecom</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Pharma &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Services &amp; Industries</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>