Production/01-02-2025/force-app/main/default/objects/Account/fields/Advertiser_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Sector_2__c</fullName>
    <label>Advertiser Sector 2 (Manual Edit)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Advertiser_Sector_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Attractions</fullName>
            </value>
            <value>
                <fullName>Audio &amp; Visual</fullName>
            </value>
            <value>
                <fullName>Auto Dealerships</fullName>
            </value>
            <value>
                <fullName>Automotive General</fullName>
            </value>
            <value>
                <fullName>Auto Parts</fullName>
            </value>
            <value>
                <fullName>Auto Rentals</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Personal Care Products</fullName>
            </value>
            <value>
                <fullName>Beauty Services</fullName>
            </value>
            <value>
                <fullName>Beer, Wine &amp; Spirits</fullName>
            </value>
            <value>
                <fullName>Blogs &amp; Social Media</fullName>
            </value>
            <value>
                <fullName>Books, Newspapers &amp; Magazines</fullName>
            </value>
            <value>
                <fullName>Bus &amp; Rail Travel</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Cable &amp; Internet Service Providers</fullName>
            </value>
            <value>
                <fullName>Commercial Banking</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Industrial Production</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics &amp; Appliances</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Cruises</fullName>
            </value>
            <value>
                <fullName>Department Stores</fullName>
            </value>
            <value>
                <fullName>Drug Stores &amp; OTC Medications</fullName>
            </value>
            <value>
                <fullName>Education General</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Computers General</fullName>
            </value>
            <value>
                <fullName>Event Ticket Agencies</fullName>
            </value>
            <value>
                <fullName>Farming &amp; Agriculture</fullName>
            </value>
            <value>
                <fullName>Film &amp; Television</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>