Production/01-02-2025/force-app/main/default/objects/Account/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <inlineHelpText>For use on Audience Playbooks only</inlineHelpText>
    <label>Agency Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>