Production/01-02-2025/force-app/main/default/objects/Account/fields/Amendment_Information_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Information_Reviewed__c</fullName>
    <label>Amendment Information Reviewed</label>
    <type>Date</type>
</CustomField>