Production/01-02-2025/force-app/main/default/objects/Account/fields/Amendment_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Return_Date__c</fullName>
    <label>Amendment Return Date</label>
    <type>Date</type>
</CustomField>