Production/01-02-2025/force-app/main/default/objects/Account/fields/Approved_for_Europe__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Europe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Europe</label>
    <type>Checkbox</type>
</CustomField>