Production/01-02-2025/force-app/main/default/objects/Account/fields/B2B_Firmographics_Sources__c.field-meta.xml
<CustomField>
    <fullName>B2B_Firmographics_Sources__c</fullName>
    <label>B2B - Firmographics Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry Directories</fullName>
            </value>
            <value>
                <fullName>Networking Sites</fullName>
            </value>
            <value>
                <fullName>B2B Publications</fullName>
            </value>
            <value>
                <fullName>Business Registrations</fullName>
            </value>
            <value>
                <fullName>Completed Company Filings.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>