Production/01-02-2025/force-app/main/default/objects/Account/fields/B2B_Technographics__c.field-meta.xml
<CustomField>
    <fullName>B2B_Technographics__c</fullName>
    <label>B2B - Technographics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>