Production/01-02-2025/force-app/main/default/objects/Account/fields/Buyer_Global_Data_Alliance_Removed__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Global_Data_Alliance_Removed__c</fullName>
    <formula>IF(CONTAINS( Buyer_Global__c ,&quot;-Data Alliance&quot;),LEFT(Buyer_Global__c, FIND(&quot;-Data Alliance&quot;, Buyer_Global__c)-1),Buyer_Global__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Global (Data Alliance Removed)</label>
    <type>Text</type>
</CustomField>