Production/01-02-2025/force-app/main/default/objects/Account/fields/Buyer_Holding_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Holding_Group_Name__c</fullName>
    <formula>IF( LEN(Parent.Name)&lt;1 ,Name, 
IF( LEN( Parent.Parent.Name )&lt;1 ,Parent.Name, 
IF( LEN( Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, 
IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name, &quot;Ultimate Parent Beyond 10 Levels&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Holding Group Name</label>
    <type>Text</type>
</CustomField>