Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAAccountTradingCurrency__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
    <label>Account Trading Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>