Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAAllowDeleteInUse__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deletion of Account in Use</label>
    <type>Checkbox</type>
</CustomField>