Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODABankAccountName__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABankAccountName__c</fullName>
    <description>The name of the bank account</description>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>