Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODABankCity__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABankCity__c</fullName>
    <description>The city</description>
    <label>Bank City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>