Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODABankCountry__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABankCountry__c</fullName>
    <description>The country</description>
    <label>Bank Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>