Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODABaseDate1__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABaseDate1__c</fullName>
    <description>The date on which terms will be calculated.</description>
    <label>Base Date 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End of Next Month</fullName>
            </value>
            <value>
                <fullName>Invoice Date</fullName>
            </value>
            <value>
                <fullName>Start of Next Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>