Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODACreditLimit__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODACreditLimit__c</fullName>
    <description>The credit limit in org currency</description>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>