Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODACreditLimitEnabled__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODACreditLimitEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to enable the credit limit</description>
    <label>Credit Limit Enabled</label>
    <type>Checkbox</type>
</CustomField>