Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODACreditManager__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODACreditManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager responsible for the credit details</description>
    <label>Credit Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>