Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODACreditRatingReviewed__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODACreditRatingReviewed__c</fullName>
    <description>The date the rating was last reviewed</description>
    <label>Credit Rating Reviewed</label>
    <type>Date</type>
</CustomField>