Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODACreditStatus__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODACreditStatus__c</fullName>
    <description>The current credit status. The picklist is user-definable</description>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Allowed</fullName>
                <default>true</default>
                <label>Credit Allowed</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cash with Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>