Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODADaysOffset2__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODADaysOffset2__c</fullName>
    <description>The number of days to add to the base date</description>
    <label>Days Offset 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>