Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODADefaultExpenseAccount__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODADefaultExpenseAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default GLA on expense lines.</description>
    <label>Default Expense Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
        <filterItems>
            <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Accounts (Default Expense Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>