Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODADiscount3__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODADiscount3__c</fullName>
    <description>The amount of discount to be applied</description>
    <label>Discount 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>