Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAEntityUseCode__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAEntityUseCode__c</fullName>
    <label>Entity / Use Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Federal government - United States</fullName>
            </value>
            <value>
                <fullName>B - State government - United States</fullName>
            </value>
            <value>
                <fullName>C - Tribe / Status Indian / Indian Band - both</fullName>
            </value>
            <value>
                <fullName>D - Foreign diplomat - both</fullName>
            </value>
            <value>
                <fullName>E - Charitable or benevolent org - both</fullName>
            </value>
            <value>
                <fullName>F - Religious or educational org - both</fullName>
            </value>
            <value>
                <fullName>G - Resale - both</fullName>
            </value>
            <value>
                <fullName>H - Commercial agricultural production - both</fullName>
            </value>
            <value>
                <fullName>I - Industrial production / manufacturer - both</fullName>
            </value>
            <value>
                <fullName>J - Direct pay permit - United States</fullName>
            </value>
            <value>
                <fullName>K - Direct mail - United States</fullName>
            </value>
            <value>
                <fullName>L - Other - both</fullName>
            </value>
            <value>
                <fullName>N - Local government - United States</fullName>
            </value>
            <value>
                <fullName>P - Commercial aquaculture - Canada</fullName>
            </value>
            <value>
                <fullName>Q - Commercial Fishery - Canada</fullName>
            </value>
            <value>
                <fullName>R - Non-resident - Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>