Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAExemptionCertificate__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAExemptionCertificate__c</fullName>
    <label>Exemption Certificate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>