Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAFinanceContact__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAFinanceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>