Production/01-02-2025/force-app/main/default/objects/Account/fields/c2g__CODAOutputVATCode__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAOutputVATCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Output VAT/GST Code</label>
    <referenceTo>c2g__codaTaxCode__c</referenceTo>
    <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>